--- a/JMS/pom.xml
+++ b/JMS/pom.xml
@@ -5,6 +5,9 @@
   <groupId>com.master</groupId>
   <artifactId>JMS</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <modules>
+    <module>JMS-simple</module>
+  </modules>
   <packaging>pom</packaging>
 
   <name>JMS</name>
@@ -25,6 +28,16 @@
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
         <version>1.2.17</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.jms</groupId>
+        <artifactId>jms-api</artifactId>
+        <version>1.1-rev-1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.activemq</groupId>
+        <artifactId>activemq-all</artifactId>
+        <version>5.14.1</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
